--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
         <TextView
@@ -14,6 +15,11 @@
             android:textSize="16sp"
             android:gravity="center"
             android:text="플레이스토어 게임 순위"/>
+
+        <ListView
+            android:id="@+id/appRankListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
 
     </LinearLayout>
 </layout>
