리스트뷰 롱 클릭 이벤트 연습  - return ture /false 차이 숙지

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,11 @@
             android:textSize="16sp"
             android:gravity="center"
             android:text="플레이스토어 게임 순위"/>
+        <Button
+            android:id="@+id/okBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="확인용 버튼"/>
 
         <ListView
             android:id="@+id/appRankListView"
