--- a/app/src/main/res/layout/activity_app_detail.xml
+++ b/app/src/main/res/layout/activity_app_detail.xml
@@ -57,6 +57,7 @@
                 android:gravity="center"
                 android:textSize="20sp"/>
             <TextView
+                android:id="@+id/userRatingTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
@@ -69,16 +70,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
+                android:id="@+id/removeBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="제거하기"/>
             <Button
+                android:id="@+id/launchBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="실행하기"/>
             <Button
+                android:id="@+id/purchaseBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
