--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,25 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/titleTxt"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:text="플레이스토어 게임 순위"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/titleTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:text="플레이스토어 게임 순위"/>
+
+            <Button
+                android:id="@+id/okBtn2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="확인용 버튼"/>
+        </LinearLayout>
+
         <Button
             android:id="@+id/okBtn"
             android:layout_width="match_parent"
