--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".FilterActivity">
 
         <TextView
@@ -19,11 +20,13 @@
             android:text="최저평점"
             />
         <EditText
+            android:id="@+id/minRatingEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:hint="여기에 입력된 평점 미만의 앱은 걸러냅니다."/>
         <Button
+            android:id="@+id/okBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="확인"/>
